# JLang

./: .gitignore  JLang.cabal  Makefile  README.md
app/: Main.hs
examples/: assign-and-print.jl  basic-nested-arithmetic.jl
src/: Lib.hs
src/Backend/: Interpreter.hs
src/Frontend/: Lexer.x  Parser.y
test/: LibSpec.hs
test/Backend/: InterpreterSpec.hs
test/Frontend/: LexerSpec.hs  ParserSpec.hs
