name:                JLang
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/JCGrant/JLang
license:             BSD3
license-file:        LICENSE
author:              James Grant
maintainer:          james@jcgrant.com
copyright:           2017 James Grant
category:            Compiler
build-type:          Simple
extra-source-files:  src/Frontend/Lexer.x
                     src/Frontend/Parser.y
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Frontend.Lexer
                     , Frontend.Parser
                     , Backend.Interpreter
  build-depends:       base >= 4.7 && < 5
                     , array
                     , containers
  build-tools:         alex
                     , happy
  default-language:    Haskell2010

executable JLang-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , JLang
  default-language:    Haskell2010

test-suite JLang-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , JLang
                     , hspec
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/JCGrant/JLang
